Pascal/test/cohadar/pascal/errors/bad_operands_arithmetic3.pas
program test;
var r: real;
	
begin
	r := 3 div 2.0; 
end.